@@ -1,5 +1,3 @@
-package org.apache.tika.batch;
-
 /*
  * Licensed to the Apache Software Foundation (ASF) under one or more
  * contributor license agreements.  See the NOTICE file distributed with
@@ -16,44 +14,70 @@ package org.apache.tika.batch;
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
+package org.apache.tika.batch;
 
-import java.io.BufferedReader;
-import java.io.IOException;
-import java.io.InputStreamReader;
+
+import java.io.InputStream;
 import java.util.concurrent.Callable;
 
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
-import static java.nio.charset.StandardCharsets.UTF_8;
-
 
 /**
- * Class that waits for input on System.in.  If the user enters a keystroke on 
- * System.in, this will send a signal to the FileResourceRunner to shutdown gracefully.
- *
+ * Class that waits for input on System.in.  If this reads
+ * EOF or if there is an exception from the parent's IO,
+ * this will send a signal to shutdown the child process.
  * <p>
- * In the future, this may implement a common IInterrupter interface for more flexibility.
+ *     This will call System.exit(-1) if the process
+ *     doesn't stop after {@link #pauseOnEarlyTermination}
+ *     milliseconds.
+ * </p>
+ *
+ *
  */
 public class Interrupter implements Callable<IFileProcessorFutureResult> {
     private static final Logger LOG = LoggerFactory.getLogger(Interrupter.class);
 
-	public IFileProcessorFutureResult call(){
+    private static final long EXTRA_GRACE_PERIOD_MILLIS = 1000;
+    private final long pauseOnEarlyTermination;
+
+    public Interrupter(long pauseOnEarlyTermination) {
+        this.pauseOnEarlyTermination = pauseOnEarlyTermination;
+    }
+
+	public IFileProcessorFutureResult call() {
 		try{
-			BufferedReader reader = new BufferedReader(new InputStreamReader(System.in, UTF_8));
-			while (true){
-				if (reader.ready()){
-					reader.readLine();
-					break;
-				} else {
-					Thread.sleep(1000);
-				}
+			InputStream is = System.in;
+			int byt = is.read();
+			while (byt > -1){
+				byt = is.read();
 			}
-		} catch (InterruptedException e){
-		    //canceller was interrupted
-		} catch (IOException e){
-            LOG.error("IOException from STDIN in CommandlineInterrupter.");
+		} catch (Throwable e) {
+            LOG.warn("Exception from STDIN in CommandlineInterrupter.", e);
 		}
+		new Thread(new Doomsday()).start();
 		return new InterrupterFutureResult();
 	}
+
+    private class Doomsday implements Runnable {
+        @Override
+        public void run() {
+            if (pauseOnEarlyTermination < 0) {
+                return;
+            }
+            long start = System.currentTimeMillis();
+            long elapsed = System.currentTimeMillis()-start;
+            while (elapsed < (pauseOnEarlyTermination+EXTRA_GRACE_PERIOD_MILLIS)) {
+                try {
+                    Thread.sleep(500);
+                } catch (InterruptedException e) {
+                    return;
+                }
+                elapsed = System.currentTimeMillis()-start;
+            }
+            LOG.error("Interrupter timed out; now calling System.exit.");
+            System.exit(-1);
+        }
+    }
 }
